--- a/job_application_page.html
+++ b/job_application_page.html
@@ -294,6 +294,43 @@
             "شرق دارفور": ["الضعين", "عديلة", "أبو كارنكا", "ياسين"],
         };
 
+        // دالة لضغط الصور
+        function compressImage(file, { quality = 0.8, maxWidth = 800 } = {}) {
+            return new Promise((resolve, reject) => {
+                const reader = new FileReader();
+                reader.readAsDataURL(file);
+                reader.onload = event => {
+                    const img = new Image();
+                    img.src = event.target.result;
+                    img.onload = () => {
+                        const canvas = document.createElement('canvas');
+                        let width = img.width;
+                        let height = img.height;
+
+                        if (width > maxWidth) {
+                            height = Math.round(height * (maxWidth / width));
+                            width = maxWidth;
+                        }
+
+                        canvas.width = width;
+                        canvas.height = height;
+                        const ctx = canvas.getContext('2d');
+                        ctx.drawImage(img, 0, 0, width, height);
+
+                        canvas.toBlob(blob => {
+                            if (!blob) {
+                                reject(new Error('Canvas to Blob failed.'));
+                                return;
+                            }
+                            resolve(new File([blob], file.name, { type: 'image/jpeg' }));
+                        }, 'image/jpeg', quality);
+                    };
+                    img.onerror = error => reject(error);
+                };
+                reader.onerror = error => reject(error);
+            });
+        }
+
         window.nextStep = function(step) {
             const stepElement = document.getElementById(`step${step}`);
             const inputs = stepElement.querySelectorAll('input, select, textarea');
@@ -383,13 +420,12 @@
                 cityContainer.classList.add('hidden');
             }
         });
-        
-        // معاينة الصور التي يختارها المستخدم
+
         document.getElementById('portfolioImages').addEventListener('change', function(event) {
             const previewContainer = document.getElementById('image-preview');
             previewContainer.innerHTML = '';
             const files = event.target.files;
-            
+
             if (files) {
                 Array.from(files).forEach(file => {
                     const reader = new FileReader();
@@ -434,12 +470,20 @@
             const portfolioImageUrls = [];
             const uploadTasks = [];
 
-            // رفع الصور إلى Firebase Storage
             if (portfolioImagesFiles.length > 0) {
                 for (let i = 0; i < portfolioImagesFiles.length; i++) {
                     const file = portfolioImagesFiles[i];
-                    const storageRef = ref(storage, `portfolio_images/${new Date().getTime()}-${file.name}`);
-                    uploadTasks.push(uploadBytes(storageRef, file).then(snapshot => getDownloadURL(snapshot.ref)));
+                    try {
+                        const compressedFile = await compressImage(file);
+                        const storageRef = ref(storage, `portfolio_images/${new Date().getTime()}-${compressedFile.name}`);
+                        uploadTasks.push(uploadBytes(storageRef, compressedFile).then(snapshot => getDownloadURL(snapshot.ref)));
+                    } catch (error) {
+                        console.error("خطأ في ضغط الصورة:", error);
+                        alert(`حدث خطأ أثناء ضغط الصورة ${file.name}. الرجاء المحاولة مرة أخرى.`);
+                        submitButton.disabled = false;
+                        submitButton.textContent = originalButtonText;
+                        return;
+                    }
                 }
 
                 try {
@@ -456,7 +500,7 @@
 
             const employeeData = {
                 name: name,
-                photoUrl: null, // يمكن إضافة حقل لصورة البروفايل هنا أيضًا
+                photoUrl: null,
                 headline: headline,
                 bio: bio,
                 contact: {
@@ -475,34 +519,9 @@
                     portfolio: portfolioUrl || null,
                     linkedin: linkedinUrl || null
                 },
-                portfolioImages: portfolioImageUrls, // تم إضافة هذا الحقل
+                portfolioImages: portfolioImageUrls,
                 timestamp: serverTimestamp()
             };
 
             try {
-                await addDoc(collection(db, "employees"), employeeData);
-                alert('تم تسجيل الموظف بنجاح!');
-                employeeForm.reset();
-                currentStep = 1;
-                window.updateSteps();
-                document.getElementById('step4').classList.add('hidden');
-                document.getElementById('step1').classList.remove('hidden');
-            } catch (error) {
-                console.error("خطأ في تسجيل الموظف:", error);
-                alert('حدث خطأ أثناء تسجيل الموظف. الرجاء المحاولة مرة أخرى.');
-            } finally {
-                submitButton.disabled = false;
-                submitButton.textContent = originalButtonText;
-            }
-        };
-
-        document.addEventListener('DOMContentLoaded', () => {
-            window.updateSteps();
-            document.getElementById('step2').classList.add('hidden');
-            document.getElementById('step3').classList.add('hidden');
-            document.getElementById('step4').classList.add('hidden');
-            document.getElementById('step1').classList.remove('hidden');
-        });
-    </script>
-</body>
-</html>
+                await addDoc(collection
