--- a/job_application_page.html
+++ b/job_application_page.html
@@ -58,13 +58,6 @@
             box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
             border-color: var(--primary);
         }
-        .image-preview img {
-            width: 80px;
-            height: 80px;
-            object-fit: cover;
-            border-radius: 8px;
-            margin-left: 8px;
-        }
     </style>
 </head>
 <body>
@@ -217,12 +210,6 @@
             <div class="bg-white rounded-xl shadow-sm p-6 mb-6 form-card hidden" id="step4">
                 <h2 class="text-lg font-bold mb-4">الخطوة 4: ملفات شخصية وروابط</h2>
                 <div class="mb-4">
-                    <label for="portfolioImages" class="block text-sm font-medium text-gray-700">صور من أعمالك السابقة</label>
-                    <input type="file" id="portfolioImages" name="portfolioImages[]" multiple accept="image/*"
-                           class="w-full pr-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
-                    <div id="image-preview" class="flex flex-wrap mt-2"></div>
-                </div>
-                <div class="mb-4">
                     <label for="cvUrl" class="block text-sm font-medium text-gray-700">رابط السيرة الذاتية (CV)</label>
                     <input type="url" id="cvUrl" name="cvUrl" placeholder="مثال: https://docs.google.com/your-cv"
                            class="w-full pr-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
@@ -267,7 +254,6 @@
         const app = initializeApp(firebaseConfig);
         const analytics = getAnalytics(app);
         const db = getFirestore(app);
-        const storage = getStorage(app);
 
         let currentStep = 1;
         const totalSteps = 4;
@@ -293,43 +279,6 @@
             "وسط دارفور": ["زالنجي", "وداد", "مكجر"],
             "شرق دارفور": ["الضعين", "عديلة", "أبو كارنكا", "ياسين"],
         };
-
-        // دالة لضغط الصور
-        function compressImage(file, { quality = 0.8, maxWidth = 800 } = {}) {
-            return new Promise((resolve, reject) => {
-                const reader = new FileReader();
-                reader.readAsDataURL(file);
-                reader.onload = event => {
-                    const img = new Image();
-                    img.src = event.target.result;
-                    img.onload = () => {
-                        const canvas = document.createElement('canvas');
-                        let width = img.width;
-                        let height = img.height;
-
-                        if (width > maxWidth) {
-                            height = Math.round(height * (maxWidth / width));
-                            width = maxWidth;
-                        }
-
-                        canvas.width = width;
-                        canvas.height = height;
-                        const ctx = canvas.getContext('2d');
-                        ctx.drawImage(img, 0, 0, width, height);
-
-                        canvas.toBlob(blob => {
-                            if (!blob) {
-                                reject(new Error('Canvas to Blob failed.'));
-                                return;
-                            }
-                            resolve(new File([blob], file.name, { type: 'image/jpeg' }));
-                        }, 'image/jpeg', quality);
-                    };
-                    img.onerror = error => reject(error);
-                };
-                reader.onerror = error => reject(error);
-            });
-        }
 
         window.nextStep = function(step) {
             const stepElement = document.getElementById(`step${step}`);
@@ -421,24 +370,6 @@
             }
         });
 
-        document.getElementById('portfolioImages').addEventListener('change', function(event) {
-            const previewContainer = document.getElementById('image-preview');
-            previewContainer.innerHTML = '';
-            const files = event.target.files;
-
-            if (files) {
-                Array.from(files).forEach(file => {
-                    const reader = new FileReader();
-                    reader.onload = function(e) {
-                        const img = document.createElement('img');
-                        img.src = e.target.result;
-                        previewContainer.appendChild(img);
-                    }
-                    reader.readAsDataURL(file);
-                });
-            }
-        });
-
         window.submitForm = async function() {
             if (!employeeForm.checkValidity()) {
                 employeeForm.reportValidity();
@@ -462,45 +393,12 @@
             const cvUrl = document.getElementById('cvUrl').value;
             const portfolioUrl = document.getElementById('portfolioUrl').value;
             const linkedinUrl = document.getElementById('linkedinUrl').value;
-            const portfolioImagesFiles = document.getElementById('portfolioImages').files;
 
             const skillInputs = document.querySelectorAll('.skill-input');
             const skills = Array.from(skillInputs).map(input => input.value.trim()).filter(skill => skill !== '');
 
-            const portfolioImageUrls = [];
-            const uploadTasks = [];
-
-            if (portfolioImagesFiles.length > 0) {
-                for (let i = 0; i < portfolioImagesFiles.length; i++) {
-                    const file = portfolioImagesFiles[i];
-                    try {
-                        const compressedFile = await compressImage(file);
-                        const storageRef = ref(storage, `portfolio_images/${new Date().getTime()}-${compressedFile.name}`);
-                        uploadTasks.push(uploadBytes(storageRef, compressedFile).then(snapshot => getDownloadURL(snapshot.ref)));
-                    } catch (error) {
-                        console.error("خطأ في ضغط الصورة:", error);
-                        alert(`حدث خطأ أثناء ضغط الصورة ${file.name}. الرجاء المحاولة مرة أخرى.`);
-                        submitButton.disabled = false;
-                        submitButton.textContent = originalButtonText;
-                        return;
-                    }
-                }
-
-                try {
-                    const urls = await Promise.all(uploadTasks);
-                    portfolioImageUrls.push(...urls);
-                } catch (error) {
-                    console.error("خطأ في رفع الصور:", error);
-                    alert('حدث خطأ أثناء رفع الصور. الرجاء المحاولة مرة أخرى.');
-                    submitButton.disabled = false;
-                    submitButton.textContent = originalButtonText;
-                    return;
-                }
-            }
-
             const employeeData = {
                 name: name,
-                photoUrl: null,
                 headline: headline,
                 bio: bio,
                 contact: {
@@ -519,9 +417,33 @@
                     portfolio: portfolioUrl || null,
                     linkedin: linkedinUrl || null
                 },
-                portfolioImages: portfolioImageUrls,
                 timestamp: serverTimestamp()
             };
 
             try {
-                await addDoc(collection
+                await addDoc(collection(db, "employees"), employeeData);
+                alert('تم تسجيل الموظف بنجاح!');
+                employeeForm.reset();
+                currentStep = 1;
+                window.updateSteps();
+                document.getElementById('step4').classList.add('hidden');
+                document.getElementById('step1').classList.remove('hidden');
+            } catch (error) {
+                console.error("خطأ في تسجيل الموظف:", error);
+                alert('حدث خطأ أثناء تسجيل الموظف. الرجاء المحاولة مرة أخرى.');
+            } finally {
+                submitButton.disabled = false;
+                submitButton.textContent = originalButtonText;
+            }
+        };
+
+        document.addEventListener('DOMContentLoaded', () => {
+            window.updateSteps();
+            document.getElementById('step2').classList.add('hidden');
+            document.getElementById('step3').classList.add('hidden');
+            document.getElementById('step4').classList.add('hidden');
+            document.getElementById('step1').classList.remove('hidden');
+        });
+    </script>
+</body>
+</html>
